--- a/public/css/Component/Admin/Admin_Customer_Complains.css
+++ b/public/css/Component/Admin/Admin_Customer_Complains.css
@@ -336,6 +336,189 @@
 
 
 
+ 
+        /*personal details popup*/
+        .personal-details-popup-box {
+            display: flex;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) scale(0);
+            z-index: 4;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            overflow: hidden;
+            transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+            box-shadow: var(--box-shadow);
+            border-radius: 10px;
+            background-color: var(--main-text-color);
+        }
+    
+        .personal-details-popup-box.active {
+            transform: translate(-50%, -50%) scale(1);
+    
+    
+        }
+    
+        .personal-details-popup-form {
+            box-sizing: border-box;
+            width: 700px;
+            background: var(--background-color-main);
+            border-radius: 6px;
+            top: 0;
+            position: relative;
+            text-align: center;
+            padding: 0 30px 30px 30px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            box-shadow: var(--box-shadow);
+            color: var(--main-text-color);
+    
+        }
+    
+        .personal-details-popup-form-close {
+            width: 25px;
+            height: 25px;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            width: 20px;
+            height: 20px;
+        }
+    
+        .personal-details-popup {
+            display: grid;
+            grid-template-columns: 40% 60%;
+            width: 100%;
+            border-radius: 4px;
+            height: 100%;
+            padding-top: 10px;
+            margin-top: 17px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+    
+        .personal-details-right {
+            display: grid;
+            grid-template-columns: 30% 70%;
+    
+        }
+    
+        .personal-details-right-labels {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            padding-top: 40px;
+            padding-bottom: 50px;
+            padding-left: 25px;
+        }
+    
+        .personal-details-right-labels span {
+            margin-bottom: 15px;
+            font-size: 15px;
+            color: #7c7c7d;
+    
+        }
+    
+    
+        .personal-details-right-values {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start;
+            padding-top: 40px;
+            padding-bottom: 50px;
+            padding-left: 32px;
+    
+        }
+    
+        .personal-details-right-values span {
+            margin-bottom: 15px;
+            font-size: 15px;
+            color: #767e95;
+            font-weight: 550;
+    
+        }
+    
+        .personal-details-left {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 10px;
+            flex-direction: column;
+    
+        }
+    
+        .personal-details-left img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            overflow: hidden;
+            margin-bottom: 8px;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+        }
+    
+        .personal-details-left p {
+            margin-top: 5px;
+            font-size: 15px;
+            color: #7c7c7d;
+        }
+    
+        .personal-details-left span {
+            color: #767e95;
+            font-weight: 550;
+    
+        }
+    
+    
+        /* .profile-pic {
+            width: 70%;
+            height: auto;
+            border-radius: 50%;
+            overflow: hidden;
+            margin-bottom: 8px;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    
+        } */
+    
+        .personal-details-topic {
+            font-size: 18px;
+            font-weight: 500;
+            position: relative;
+            margin-inline-end: auto;
+            margin-top: 15px;
+    
+        }
+    
+        .personal-details-topic::before {
+            content: '';
+            position: absolute;
+            margin-top: 23px;
+            margin-left: 45px;
+            margin-bottom: 15px;
+            height: 3px;
+            width: 45px;
+            background: var(--green-color-one);
+    
+        }
+
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.1);
+            z-index: 2;
+            display: none;
+        }
+    
+
+
+
     @media screen and (max-width: 1250px) {
         .main-left-middle-content h2 {
             display: none;
@@ -560,6 +743,9 @@
             height: 100%;
         }
     }
+
+
+
 
 
 
