--- a/public/css/Component/Admin/Admin_Customer_Complains.css
+++ b/public/css/Component/Admin/Admin_Customer_Complains.css
@@ -412,7 +412,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: flex-start;
-            padding-top: 40px;
+            padding-top: 2px;
             padding-left: 25px;
         }
     
@@ -429,7 +429,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: flex-start;
-            padding-top: 40px;
+            padding-top: 2px;
             padding-left: 32px;
     
         }
@@ -449,6 +449,7 @@
             padding: 10px;
             flex-direction: column;
             margin-left: 50px;
+            margin-top: 15px;
     
         }
     
@@ -535,7 +536,7 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             margin-left: 60px;
-            width: 550px;
+            width: 510px;
             box-shadow: 0 0px 2px rgba(0, 0, 0, 0.1); 
             background-color: #fafafa;
            
@@ -550,6 +551,7 @@
             margin-bottom: 15px;
             font-size: 15px;
             color: #7c7c7d;
+            overflow: scroll;
        
         }
 
@@ -560,7 +562,7 @@
         
         .personal-details-bottom-two .subject-complain-box {
             height: 94px;
-            margin-bottom: 10px; 
+            margin-bottom: 15px; 
         }
         
         
