--- a/public/css/Component/Customer/Customer_Dashboard.css
+++ b/public/css/Component/Customer/Customer_Dashboard.css
@@ -186,6 +186,15 @@
         box-shadow: var(--box-shadow);
     }
 
+    .empty-transaction {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: 13%;
+        font-size: 15px;
+    }
+
     .main-right-bottom-one-right h1 {
         font-size: 18px;
         margin-bottom: 4%;
