--- a/public/css/Component/Collector/Collector_GarbageTypes.css
+++ b/public/css/Component/Collector/Collector_GarbageTypes.css
@@ -12,255 +12,197 @@
   }
 
   .main-right {
-      display: grid;
-      width: 100%;
-      height: 100%;
-      grid-template-rows: 22% 78%;
-      overflow: scroll;
-      background-color: var(--background-color-right);
-      box-sizing: border-box;
-  }
+    background-color: var(--background-color-right);
+    display: grid;
+    grid-template-rows: 9% 91%;
+}
 
-  .main-right-top {
-      display: flex;
-      flex-direction: column;
-      border-top-left-radius: 10px;
-      border-top-right-radius: 10px;
-      background-color: var(--background-color-right);
+.main-right-top {
+    background-color: var(--background-color-main);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: var(--box-shadow2);
+    width: 100%;
+    box-sizing: border-box;
+    z-index: 1;
+}
 
-  }
+.main-right-top-search {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 15%;
+    position: relative;
+    margin-left: -1%;
+}
 
-  .main-right-bottom-two {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-  }
+.main-right-top-search i {
+    position: absolute;
+    font-size: 25px;
+    left: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
 
-  .main-right-bottom-two-content {
-      width: 55%;
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-  }
+.main-right-top-search input {
+    width: 100%;
+    height: 33px;
+    border-radius: 7px;
+    background-color: var(--background-color-two);
+    border: 1px solid #dcdde1;
+    font-size: 14px;
+    padding-left: 50px;
+    letter-spacing: 0.03rem;
+    color: var(--main-text-color);
+}
 
-  .main-right-top-one {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-around;
-      border: 10px;
-      width: 100%;
-      box-sizing: border-box;
-      height: 42%;
-      box-shadow: var(--box-shadow2);
-      z-index: 3;
-  }
+.main-right-top-search input:focus {
+    outline: none;
+}
 
-  .main-right-top-search {
-      display: flex;
-      visibility: none;
-      align-items: center;
-      justify-content: center;
-      width: 35%;
-      position: relative;
-  }
+.main-right-top-notification {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 50%;
+    margin-right: -1%;
+}
 
-  .main-right-top-search i {
-      position: absolute;
-      font-size: 25px;
-      left: 10px;
-      top: 50%;
-      transform: translateY(-50%);
-  }
+.main-right-top-profile {
+    display: flex;
+    margin-right: 22px;
+}
 
-  .main-right-top-search input {
-      width: 100%;
-      height: 33px;
-      border-radius: 7px;
-      background-color: var(--background-color-two);
-      border: 1px solid #dcdde1;
-      font-size: 14px;
-      padding-left: 40px;
-      letter-spacing: 0.03rem;
-      color: var(--main-text-color);
+.main-right-top-profile img {
+    width: 50px;
+    height: 50px;
+    margin-right: 15px;
+    border-radius: 10px;
+}
 
-  }
+.main-right-top-profile-cont {
+    margin-top: 7px;
+}
 
-  .main-right-top-search input:focus {
-      border: 1px solid #1ca557;
-      outline: none;
-  }
+.main-right-top-profile-cont h3 {
+    font-size: 18px;
+    letter-spacing: 0.03rem;
+}
 
-  .main-right-top-notification {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin-left: 35%;
-      margin-right: 2.5%;
-  }
+.main-right-top-profile-cont p {
+    font-size: 14px;
+}
 
-  .main-right-top-two {
-      height: 50px;
-      display: flex;
-      align-items: center;
-      padding-left: 33px;
-      background-color: var(--background-color-right);
-  }
+.main-bottom {
+    display: grid;
+    grid-template-rows: 16% 84%;
+}
 
-  .main-right-top-two h1 {
-      font-size: 19px;
-      margin-left: 1%;
-      margin-top: 1%;
-  }
+.main-bottom-top {
+    display: flex;
+    flex-direction: column;
+    padding-left: 45px;
+}
 
-  .main-right-top-three {
-      height: 50px;
-      display: flex;
-      align-items: center;
-      padding-left: 45px;
-      background-color: var(--background-color-right);
-      font-weight: 100 !important;
-  }
+.main-bottom-top p {
+    font-size: 15px !important;
+    padding-bottom: 5px;
+    color: var(--main-text-color);
+    letter-spacing: 0.03rem;
+}
 
-  .main-right-top-three h4 {
-      font-weight: 100 !important;
-      font-size: 15px;
-      letter-spacing: 0.03rem;
-  }
+.main-bottom-top h2 {
+    font-size: 18px !important;
+    padding-bottom: 5px;
+    color: var(--main-text-color);
+    letter-spacing: 0.03rem;
+    margin-top: 15px;
+}
 
-  .main-right-bottom {
-      display: grid;
-      height: 100%;
-      box-sizing: border-box;
-      border-bottom-left-radius: 10px;
-      border-bottom-right-radius: 10px;
-      background-color: var(--background-color-right);
-  }
+.main-bottom-top-cont {
+    display: flex;
+    margin-top: 8px;
+}
 
-  .main-right-bottom-container {
-      display: grid;
-      grid-template-rows: 10% 90%;
-      width: 100%;
-      height: 550px;
-  }
+.line2 {
+    width: 90px;
+    height: 3px;
+    background-color: var(--green-color-one);
+}
 
-  .main-right-bottom-container-top {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      margin-bottom: 20px;
-      margin-left: 20px;
-      font-size: 15px;
-  }
+.main-bottom-top-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-right: 13px;
+    cursor: pointer;
+}
 
-  .circle {
-      border-radius: 50%;
-      background-color: #1B6652;
-      width: 8px;
-      height: 8px;
-      margin-right: 8px;
-      margin-left: 2%;
+.line1 {
+    width: 90px;
+    height: 3px;
+}
 
-  }
+.main-bottom-down {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-  .main-right-bottom-container-container {
-      width: 100%;
-      height: 100%;
-  }
+.main-right-bottom-down {
+    padding-left: 3.5%;
+    width: 96.5%;
+    height: 480px;
+    overflow: scroll;
+}
 
-  .main-right-bottom-top {
-      padding-left: 3.5%;
-      width: 96.5%;
-  }
+.main-right-bottom-top {
+    padding-left: 3.5%;
+    width: 96.5%;
+}
 
-  .main-right-bottom-down {
-      padding-left: 3.5%;
-      width: 96.5%;
-      height: 450px;
-      overflow: scroll;
-  }
+.table {
+    padding-left: 3.5%;
+    width: 96.5%;
+    border-collapse: collapse;
+    text-align: center;
+}
 
-  .table {
-      border-collapse: collapse;
-      padding-left: 3.5%;
-      width: 96.5%;
-      background-color: white;
-  }
+.table-row {
+    height: 55px;
+    grid-template-columns: 15% 25% 15% 35%;
+}
 
-  .table-header {
-      grid-template-columns: 20% 50% 30%
-  }
+.table td {
+    height: 55px;
+}
 
-  .table-row {
-      height: 45px;
-      grid-template-columns: 20% 50% 30%
-  }
-
-  .table td {
-      height: 40px;
-      font-size: 14px;
-      text-align: left !important;
-  }
-
-  @media screen and (max-width: 1118px) {
-      .table td {
-          font-size: 12px;
-      }
-
-      .table-header {
-          font-size: 14px;
-      }
-
-      .table-row img {
-          width: 20px;
-          height: 20px;
-      }
-
-      .main-right-top-search {
-          margin-left: 40px;
-      }
-  }
+.table-header {
+    grid-template-columns: 15% 25% 15% 35%;
+}
 
 
-  @media screen and (max-width:862px) {
+@media screen and (max-width: 950px) {
+    .main-bottom-component {
 
-      .main-right-top-three-content p {
-          font-size: 14px;
-      }
-
-      .line {
-          width: 86px;
-          height: 2px;
-      }
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
 
-  }
+    .main-bottom-component-right {
+        display: none;
 
-  @media screen and (max-width: 844px) {
-      .main-right-top-notification {
-          margin-left: 5%;
-      }
+    }
 
-      .notification_popup {
-          top: 11%;
-          right: 20%;
-          width: 31%;
-      }
-
-      .notification_popup h1 {
-          font-size: 19px;
-          letter-spacing: 0.001rem;
-          margin-top: 5px;
-          margin-left: 8px;
-      }
-
-      .main-right-top-search {
-          margin-left: 1px;
-      }
-  }
-
+    .main-bottom-component-left {
+        width: 100%;
+    }
+}
 
 
 }
