--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,6 +47,8 @@
 /* Colletor Main left hand side CSS This is used in left hand side of all the Colletor uis*/
 @import url('Component/Collector/Collector_Main.css');
 
+@import url('Component/Collector/Collector_Analatics.css');
+
 /* Colletor Main Right hand side of the dashboard CSS */
 @import url('Component/Collector/Collector_Dashboard.css');
 @import url('Component/Collector/Collector_GarbageTypes.css');
@@ -63,6 +65,8 @@
 @import url('Component/Collector/Collector_Request_Completed.css');
 
 @import url('Component/Collector/Collector_Editprofile.css');
+
+
 
 /* Center Manager CSS */
 
