--- a/public/css/Component/Collector/Collector_Request_Cancelled.css
+++ b/public/css/Component/Collector/Collector_Request_Cancelled.css
@@ -277,6 +277,11 @@
         .table-row {
             grid-template-columns: 11% 12% 14% 11% 11% 11% 14%;
         }
+
+        .main-right-top-profile{
+            margin-right: 100px;
+          }
+        
     }
     
     @media screen and (max-width:555px) {
@@ -296,15 +301,15 @@
     
         
         .main-right-bottom {
-            width: 190% !important;
+            width: 160% !important;
         }
     
         .main-right-bottom-top {
-            width: 190% !important;
+            width: 160% !important;
         }
     
         .main-right-bottom-down {
-            width: 190% !important;
+            width: 160% !important;
         }
     
         .table-header {
@@ -313,6 +318,24 @@
     
         .table-row {
             grid-template-columns:  6% 12% 12% 9% 9% 9% 9%;
+        }
+
+
+        .main-right-top-four-left{
+            margin-left: 35px;
+            padding-left: 0;
+        }
+
+        .main-right-top-four-left button{
+            width: 60px;
+        }
+
+        .main-right-top-four-left p{
+            display: none;
+        }
+
+        .main-right-top-four-right{
+            margin-right: 40%;
         }
     
     }
