--- a/public/css/Component/Collector/Collector_Reuqest_Assigned.css
+++ b/public/css/Component/Collector/Collector_Reuqest_Assigned.css
@@ -1036,6 +1036,11 @@
   .table-row {
       grid-template-columns: 11% 12% 14% 11% 11% 11% 14%;
   }
+  .main-right-top-profile{
+    margin-right: 100px;
+  }
+
+
 }
 
 @media screen and (max-width:555px) {
@@ -1073,6 +1078,27 @@
   .table-row {
       grid-template-columns:  6% 12% 12% 9% 9% 9% 9%;
   }
+
+
+  
+
+.main-right-top-four-left{
+  margin-left: 35px;
+  padding-left: 0;
+}
+
+.main-right-top-four-left button{
+  width: 60px;
+}
+
+.main-right-top-four-left p{
+  display: none;
+}
+
+.main-right-top-four-right{
+  margin-right: 40%;
+}
+
 
 }
 }
