--- a/public/css/Component/Admin/Admin_Customer.css
+++ b/public/css/Component/Admin/Admin_Customer.css
@@ -80,11 +80,14 @@
 
 
     .main-right-top-two {
-        height: 50px;
+        height: 60px;
         display: flex;
-        align-items: center;
+        justify-content: center;
+        justify-content: space-between;
         padding-left: 33px;
         background-color: var(--background-color-right);
+        padding-top: 10px;
+
     }
 
     .main-right-top-two h1 {
@@ -94,15 +97,81 @@
         margin-top: 1%;
     }
 
-    .main-right {
+    .main-right-top-two {
+        .center-box {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            box-sizing: border-box;
+            padding-right: 25px;
+            font-size: 15px;
+            margin-top: 11px;
+            margin-left: 70%;
+        }
 
+        .center-box {
+            select {
+                width: 100%;
+                padding: 2px 15px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                box-sizing: border-box;
+                background-color: #fff;
+                height: 25px;
+            }
+
+            select:hover {
+                border-color: #888;
+            }
+
+            select:focus {
+                outline: none;
+            }
+
+            p {
+                margin-top: 5px;
+                margin-right: 10px;
+
+            }
+
+            option {
+                padding: 7px;
+                background-color: #f9f9f9;
+                color: #333;
+                font-size: 13px;
+                font-family: inter;
+            }
+
+            option:hover {
+                background-color: #e0e0e0;
+            }
+        }
+
+        button {
+            padding: 2px 10px;
+            font-size: 15px;
+            background-color: #1ca557;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            letter-spacing: 0.03rem;
+            margin-bottom: 10px;
+            margin-right: 45px;
+            height: 25px;
+            margin-top: 10px;
+        }
+    }
+
+    .main-right {
         overflow-x: hidden !important;
     }
 
     .main-right-bottom-down {
         padding-left: 3.5%;
         width: 96.5%;
-        height: 550px;
+        height: 510px;
         overflow: scroll;
     }
 
@@ -590,6 +659,14 @@
         background: #a7a1a1;
     }
 
+    @media screen and (max-width: 1178px) {
+
+        .main-right-top-two {
+            .center-box {
+                margin-left: 30%;
+            }
+        }
+    }
 
     @media screen and (max-width: 1178px) {
         .image2 {
@@ -684,6 +761,15 @@
 
         .line {
             width: 50px;
+        }
+
+        @media screen and (max-width: 1178px) {
+
+            .main-right-top-two {
+                .center-box {
+                    margin-left: -15%;
+                }
+            }
         }
 
     }
